# dbcsr

./: CMakeLists.txt  Makefile  Makefile.inc
.ci/daint.cscs.ch/: Jenkinsfile  ocl.build.sh  ocl.test.sh
.cp2k/: Makefile  makedep.py
.pre-commit/headers/: script.2
cmake/: CompilerConfiguration.cmake  fypp-sources.cmake
examples/: CMakeLists.txt  dbcsr_example_1.F  dbcsr_example_2.F  dbcsr_example_3.F
src/: CMakeLists.txt
src/acc/: Makefile  PACKAGE  README.md  acc.h  acc_bench.h  acc_bench_smm.c  acc_bench_trans.c  acc_dev.cpp  acc_error.cpp  acc_error.h  acc_event.cpp  acc_init.cpp  acc_libsmm.h  acc_mem.cpp  acc_stream.cpp  dbcsr_acc_devmem.F  dbcsr_acc_test.c
src/acc/cuda/: Makefile  PACKAGE  acc_cuda_event.cu  acc_cuda_stream.cu  acc_dev.cpp  acc_error.cpp  acc_event.cpp  acc_init.cpp  acc_mem.cpp  acc_stream.cpp
src/acc/cuda_hip/: acc_dev.cpp
src/acc/hip/: PACKAGE
src/acc/include/: acc.h
src/acc/libsmm_acc/: CMakeLists.txt  libsmm_acc.cpp  libsmm_acc.h  libsmm_acc_benchmark.cpp  libsmm_acc_benchmark.h  libsmm_acc_init.cpp
src/acc/libsmm_acc/include/: libsmm_acc.h
src/acc/libsmm_acc/kernels/: smm_acc_common.h
src/acc/libsmm_acc/libcusmm/: libcusmm.cpp  libcusmm.h  libcusmm_benchmark.h
src/acc/libsmm_acc/libsmm/: CMakeLists.txt  PACKAGE  libsmm.c  libsmm.h  libsmm_process.c  libsmm_transpose.c
src/acc/libsmm_acc/tune/: archive.sh
src/acc/libsmm_omp/: PACKAGE  libsmm_omp.c  libsmm_omp.h  libsmm_omp_process.c  libsmm_omp_transpose.c
src/acc/omp/: Makefile  PACKAGE  dbcsr_omp.c  dbcsr_omp.h  dbcsr_omp_event.c  dbcsr_omp_mem.c  dbcsr_omp_stream.c
src/acc/opencl/: Makefile  README.md  acc_opencl.c  acc_opencl.h  acc_opencl.sh  acc_opencl_event.c  acc_opencl_mem.c  acc_opencl_stream.c  acc_opencl_test.c
src/acc/opencl/smm/: CMakeLists.txt  README.md  acc_opencl_smm.c  acc_opencl_smm.h  opencl_libsmm.c  opencl_libsmm.h  tune_multiply.py  tune_multiply.sh
src/acc/opencl/smm/kernels/: multiply.cl  transpose.cl  transpose_inplace.cl  transpose_tiny.cl
src/acc/opencl_smm/: Makefile  acc_opencl_bench_trans.c  acc_opencl_process.c  acc_opencl_smm.c  acc_opencl_smm.h  acc_opencl_smm_process.c  acc_opencl_smm_test.c  acc_opencl_smm_transpose.c  acc_opencl_trans.c  acc_opencl_trans_bench.c
src/acc/opencl_smm/kernels/: transpose.cl  transpose_inplace.cl  transpose_tiny.cl
src/acc/openmp/: CMakeLists.txt  Makefile  PACKAGE  acc_openmp.c  acc_openmp.h  acc_openmp_event.c  acc_openmp_mem.c  acc_openmp_stream.c
src/block/: dbcsr_block_access.F  dbcsr_block_operations.F  dbcsr_block_operations.f90  dbcsr_index_operations.F
src/core/: PACKAGE  dbcsr_config.F  dbcsr_lib.F
src/data/: dbcsr_ptr_util.f90
src/mm/: PACKAGE  dbcsr_acc_operations.F  dbcsr_mm_hostdrv.f90  dbcsr_mm_sched.F
src/mpi/: dbcsr_mp_methods.F  dbcsr_mp_operations.F  dbcsr_mpiwrap.F  dbcsr_mpiwrap.f90
src/tensors/: dbcsr_array_list_methods.F  dbcsr_tensor.F
src/work/: dbcsr_work_operations.F
tests/: CMakeLists.txt  Makefile.inc  dbcsr_tas_unittest.F  dbcsr_tensor_unittest.F  dbcsr_test_acc.c  dbcsr_test_csr_conversions.F  dbcsr_unittest1.F  dbcsr_unittest2.F  dbcsr_unittest3.F  dbcsr_unittest4.F
